[package]
name = "discord"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamedig = "0.2.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
simple_config_parser = "1.0.0"
tokio = { version="1.25.0",features= ["macros", "rt-multi-thread"] }

